bugfix: Fix Safari Image Overflow Bug

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,6 @@ body {
 	object-fit: fill;
 }
 .landing-content .right {
-	display: flex;
 	align-items: center;
 	margin-left: -3.6rem;
 }
